test/libsolidity/syntaxTests/parsing/import_empty.sol
import "";
// ----
// ParserError 6326: (9-10): Import path cannot be empty.
